Changing architecture back to all, since any means something else

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,6 @@ Maintainer: June Tate-Gans <june@theonelab.com>
 Standards-Version: 4.3.0
 
 Package: rpi-eeprom
-Architecture: any
+Architecture: all
 Depends: dpkg (>= 1.15.4), python3
 Description: Raspberry Pi 4 EEPROM management tooling
