--- a/debian/control
+++ b/debian/control
@@ -7,5 +7,5 @@ Standards-Version: 4.3.0
 
 Package: rpi-eeprom
 Architecture: all
-Depends: dpkg (>= 1.15.4), python3
+Depends: dpkg (>= 1.15.4), python, binutils
 Description: Raspberry Pi 4 EEPROM management tooling
